Making GameMapGenerator static